# PathVariableManager

./: CMakeLists.txt  Readme.md  main.cpp  pathmanager.cpp  pathmanager.h  pvm.bat
